<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">UPCOMING ELECTIONS</string>
    <string name="find_my_representatives">FIND MY REPRESENTATIVES</string>
    <string name="ballot_logo">Ballot Logo</string>
    <string name="upcoming_elections_header">Upcoming Elections</string>
    <string name="saved_elections_header">Saved Elections</string>
    <string name="election_information_header">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="correspondence_address_header">Correspondence Address</string>
    <string name="follow_election">FOLLOW ELECTION</string>
    <string name="unfollow_election">UNFOLLOW ELECTION</string>
    <string name="use_my_location">USE MY LOCATION</string>
    <string name="my_representatives">My Representatives</string>
    <string name="representative_search">Representative Search</string>
    <string name="zip">Zip</string>
    <string name="city">City</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_1">Address Line 1</string>

    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>

</resources>
